--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(threepp CONFIG REQUIRED)
 
-add_executable(test main.cpp)
-target_link_libraries(test PRIVATE threepp::threepp)
+
+
+add_executable(PingPong main.cpp)
+target_link_libraries(PingPong PRIVATE threepp::threepp)
