--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,27 +2,11 @@ cmake_minimum_required(VERSION 3.15)
 project(Code_Project)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
 
-# Stuff for testing
-include(FetchContent)
-FETCHCONTENT_DECLARE(
-        Catch2
-        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-        GIT_TAG v2.13.8
-)
-FETCHCONTENT_MAKEAVAILABLE(Catch2)
-enable_testing()
-#
 find_package(threepp CONFIG REQUIRED)
 add_executable(PingPong main.cpp tests/test.cpp)
 target_link_libraries(PingPong PRIVATE threepp::threepp)
 
-
-find_package(catch2 REQUIRED)
-add_executable(tests test.cpp)
-target_link_libraries(tests PRIVATE my_library Catch2::Catch2)
-
-include(CTest)
-include(Catch)
-catch_discover_tests(tests)
-
+find_package(catch2 CONFIG REQUIRED)
+target_link_libraries(main PRIVATE Catch2::Catch2 Catch2::Catch2WithMain)
