--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ target_link_libraries(PingPong PRIVATE threepp::threepp)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-
-find_package(Catch2 CONFIG REQUIRED)
-add_executable(tests tests/test_1.cpp)
-target_link_libraries(tests PRIVATE Catch2::Catch2)
-add_subdirectory(tests)
+# stuff for testing
+find_package(Catch2 3 REQUIRED)
+# These tests can use the Catch2-provided main
+add_executable(tests test.cpp)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
