--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,14 +1,14 @@
-#
-function(create_test name)
-    add_executable(${name} ${name}.cpp)
-    add_test(NAME ${name} COMMAND ${name})
-    target_include_directories(${name} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
-    target_link_libraries(${name} PRIVATE Catch2::Catch2WithMain threepp::threepp)
-endfunction()
-
-create_test(Objects_test)
-create_test(Movement_test)
 
 
+add_executable(Movement_test Movement.cpp)
+add_test(NAME Movement_test COMMAND Movement_test)
+target_link_libraries(Movement_test PRIVATE threepp Catch2::Catch2)
+target_include_directories(Movement_test PUBLIC "${CMAKE_SOURCE_DIR}/include")
+
+
+add_executable(Objects_test Objects.cpp)
+add_test(NAME Objects_test COMMAND Objects_test)
+target_link_libraries(Objects_test PRIVATE threepp Catch2::Catch2)
+target_include_directories(Objects_test PUBLIC "${CMAKE_SOURCE_DIR}/include")
 
 
