--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # stuff for testing
 find_package(Catch2 CONFIG REQUIRED)
-add_executable(Objects_test tests/Objects.cpp)
-target_link_libraries(Objects_test PRIVATE Catch2::Catch2WithMain threepp::threepp)
-add_executable(Movement_test tests/Movement.cpp)
-target_link_libraries(Movement_test PRIVATE Catch2::Catch2WithMain threepp::threepp)
+add_subdirectory(tests)
 
