--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Test
         run: |
-          cd build/tests
+          cd tests
           ctest --output-on-failure
 
 
@@ -75,7 +75,7 @@ jobs:
 
       - name: Test
         run: |
-          cd build/tests
+          cd tests
           ctest -C Release --output-on-failure
 
 
